# thu-info-rss

./: Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  scraper.py
.github/workflows/: build.yml
kustomize/: kustomization.yaml  service.yaml  statefulSet.yaml
templates/: index.html
